cluster/kube-system/_services/rocinante.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rocinante
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "rocinante.devbu.io."
spec:
  type: ExternalName
  externalName: 192.168.1.39
---
apiVersion: v1
kind: Service
metadata:
  name: rocinante-portal
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "portal.rocinante.devbu.io."
spec:
  type: ExternalName
  externalName: 192.168.1.39
  ports:
  - name: http
    port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocinante-portal
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: rocinante-portal
    app.kubernetes.io/name: rocinante-portal
spec:
  rules:
  - host: "portal.rocinante.devbu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocinante-portal
            port:
              number: 8080
  tls:
  - hosts:
    - "portal.rocinante.devbu.io"
---
apiVersion: v1
kind: Service
metadata:
  name: rocinante-nexus
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "nexus.rocinante.devbu.io."
spec:
  type: ExternalName
  externalName: 192.168.1.39
  ports:
  - name: http
    port: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocinante-nexus
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: rocinante-nexus
    app.kubernetes.io/name: rocinante-nexus
spec:
  rules:
  - host: "nexus.rocinante.devbu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocinante-nexus
            port:
              number: 8081
  tls:
  - hosts:
    - "nexus.rocinante.devbu.io"
---
apiVersion: v1
kind: Service
metadata:
  name: rocinante-minio
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "minio.rocinante.devbu.io."
spec:
  type: ExternalName
  externalName: 192.168.1.39
  ports:
  - name: http
    port: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocinante-minio
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: rocinante-minio
    app.kubernetes.io/name: rocinante-minio
spec:
  rules:
  - host: "minio.rocinante.devbu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocinante-minio
            port:
              number: 9000
  tls:
  - hosts:
    - "minio.rocinante.devbu.io"
---
apiVersion: v1
kind: Service
metadata:
  name: rocinante-registry
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "registry.rocinante.devbu.io."
spec:
  type: ExternalName
  externalName: 192.168.1.39
  ports:
  - name: http
    port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocinante-registry
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: rocinante-registry
    app.kubernetes.io/name: rocinante-registry
spec:
  rules:
  - host: "registry.rocinante.devbu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocinante-registry
            port:
              number: 5000
  tls:
  - hosts:
    - "registry.rocinante.devbu.io"
