cluster/kube-system/_services/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "unifi.devbu.io."
spec:
  type: ExternalName
  ports:
  - name: http
    port: 443
  externalName: 192.168.1.2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi
spec:
  rules:
  - host: "unifi.devbu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 443
  tls:
  - hosts:
    - "unifi.devbu.io"
